Se agrega animaciones para la entrada de targetas y el boton de envio en CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="Hero-carousel" id="inicio">
         <div class="carousel-container">
             <div class="carousel-slide active">
-                <img src="src/img/blog1.avif" alt="Desarrollo Web Moderno">
+                <img src="/src/img/blog4.jpeg" alt="Desarrollo Web Moderno">
                 <div class="slide-content">
                     <h2>Desarrollo Web Moderno</h2>
                     <p>Aprende las últimas tecnologías frontend</p>
